# ecif

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: cd-publish.yaml  cd.yaml  ci.yaml
docs/: notes.md
ecif/: orchestrator.py
ecif/calc/creg/: __init__.py  creg_estimator.py
ecif/calc/eqn/: base.py
ecif/configs/: base_trial_config.py
ecif/exceptions/: core_exceptions.py
ecif/sample_data/: cibt_fetcher.py
ecif/utils/: dynaload.py  logging.py
tests/: conftest.py  test_placeholder.py
tests/calc/: test_classical_regression_estimator.py  test_eqn.py
tests/configs/: test_base_config.py
tests/sample_data/: test_fetch_sample_data.py
tests/test_data/test_configs/: test_config_cr_online_classroom.yaml
tests/utils/: test_dynaload.py
